the add to profile area works because I had to give the content view an intrinsic height by adding top and bottom constraints

--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -52,75 +52,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lRp-GR-lFB">
-                                <rect key="frame" x="0.0" y="108" width="600" height="79"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KUC-4Y-beP">
-                                        <rect key="frame" x="0.0" y="0.0" width="134" height="79"/>
-                                        <subviews>
-                                            <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2iB-AG-Xp8" customClass="TagListView" customModule="TagListView">
-                                                <rect key="frame" x="8" y="28" width="0.0" height="24"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" id="5AO-FB-Xpb"/>
-                                                    <constraint firstAttribute="height" constant="24" id="83c-M0-ifX"/>
-                                                </constraints>
-                                            </view>
-                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QqA-ji-qaT">
-                                                <rect key="frame" x="38" y="25" width="96" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="9FK-yG-8HR"/>
-                                                    <constraint firstAttribute="width" constant="46" id="Ewt-5H-yay"/>
-                                                </constraints>
-                                                <state key="normal" title="Add To Profile"/>
-                                                <variation key="default">
-                                                    <mask key="constraints">
-                                                        <exclude reference="9FK-yG-8HR"/>
-                                                        <exclude reference="Ewt-5H-yay"/>
-                                                    </mask>
-                                                </variation>
-                                                <connections>
-                                                    <action selector="addToProfilePressed:" destination="mYP-fS-yh2" eventType="touchUpInside" id="X1O-Ip-ycd"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstItem="2iB-AG-Xp8" firstAttribute="leading" secondItem="KUC-4Y-beP" secondAttribute="leading" constant="8" id="1bh-0d-Ovl"/>
-                                            <constraint firstItem="2iB-AG-Xp8" firstAttribute="centerY" secondItem="KUC-4Y-beP" secondAttribute="centerY" id="FAj-rw-YGS"/>
-                                            <constraint firstAttribute="trailing" secondItem="QqA-ji-qaT" secondAttribute="trailing" constant="4" id="J1b-nh-oJq"/>
-                                            <constraint firstAttribute="width" secondItem="2iB-AG-Xp8" secondAttribute="width" id="MvN-Wr-BUO"/>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="79" id="OmA-RI-P4C"/>
-                                            <constraint firstItem="QqA-ji-qaT" firstAttribute="leading" secondItem="2iB-AG-Xp8" secondAttribute="trailing" constant="26" id="Vet-9C-Ytb"/>
-                                            <constraint firstAttribute="width" secondItem="2iB-AG-Xp8" secondAttribute="width" constant="80" id="vyk-wC-DuZ"/>
-                                            <constraint firstAttribute="height" constant="79" id="xur-8t-6cH"/>
-                                            <constraint firstItem="QqA-ji-qaT" firstAttribute="centerY" secondItem="KUC-4Y-beP" secondAttribute="centerY" id="zcj-3Z-BbE"/>
-                                        </constraints>
-                                        <variation key="default">
-                                            <mask key="constraints">
-                                                <exclude reference="OmA-RI-P4C"/>
-                                                <exclude reference="MvN-Wr-BUO"/>
-                                                <exclude reference="vyk-wC-DuZ"/>
-                                            </mask>
-                                        </variation>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="79" id="Cdh-71-GBJ"/>
-                                    <constraint firstAttribute="trailing" secondItem="KUC-4Y-beP" secondAttribute="trailing" id="EPd-45-nTb"/>
-                                    <constraint firstItem="KUC-4Y-beP" firstAttribute="leading" secondItem="lRp-GR-lFB" secondAttribute="leading" id="KjU-gG-owz"/>
-                                    <constraint firstItem="KUC-4Y-beP" firstAttribute="height" secondItem="lRp-GR-lFB" secondAttribute="height" id="PJo-VP-gaJ"/>
-                                    <constraint firstAttribute="bottom" secondItem="KUC-4Y-beP" secondAttribute="bottom" id="PO7-hQ-6gn"/>
-                                    <constraint firstAttribute="bottom" secondItem="KUC-4Y-beP" secondAttribute="bottom" id="fxy-7m-HQM"/>
-                                    <constraint firstItem="KUC-4Y-beP" firstAttribute="top" secondItem="lRp-GR-lFB" secondAttribute="top" id="nXa-B2-gyZ"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="PJo-VP-gaJ"/>
-                                        <exclude reference="PO7-hQ-6gn"/>
-                                    </mask>
-                                </variation>
-                            </scrollView>
                             <searchBar contentMode="redraw" placeholder="Search Tags" translatesAutoresizingMaskIntoConstraints="NO" id="hfh-eM-SNs">
                                 <rect key="frame" x="0.0" y="64" width="600" height="44"/>
                                 <constraints>
@@ -144,6 +75,79 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lRp-GR-lFB">
+                                <rect key="frame" x="0.0" y="108" width="600" height="79"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KUC-4Y-beP">
+                                        <rect key="frame" x="0.0" y="0.0" width="134" height="79"/>
+                                        <subviews>
+                                            <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2iB-AG-Xp8" customClass="TagListView" customModule="TagListView">
+                                                <rect key="frame" x="8" y="28" width="0.0" height="24"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" id="5AO-FB-Xpb"/>
+                                                    <constraint firstAttribute="height" constant="24" id="83c-M0-ifX"/>
+                                                </constraints>
+                                            </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QqA-ji-qaT">
+                                                <rect key="frame" x="34" y="25" width="96" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="1oS-E1-gga"/>
+                                                    <constraint firstAttribute="height" constant="30" id="9FK-yG-8HR"/>
+                                                    <constraint firstAttribute="width" constant="46" id="Ewt-5H-yay"/>
+                                                </constraints>
+                                                <state key="normal" title="Add To Profile"/>
+                                                <variation key="default">
+                                                    <mask key="constraints">
+                                                        <exclude reference="9FK-yG-8HR"/>
+                                                        <exclude reference="Ewt-5H-yay"/>
+                                                    </mask>
+                                                </variation>
+                                                <connections>
+                                                    <action selector="addToProfilePressed:" destination="mYP-fS-yh2" eventType="touchUpInside" id="X1O-Ip-ycd"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="2iB-AG-Xp8" firstAttribute="leading" secondItem="KUC-4Y-beP" secondAttribute="leading" constant="8" id="1bh-0d-Ovl"/>
+                                            <constraint firstItem="QqA-ji-qaT" firstAttribute="top" secondItem="KUC-4Y-beP" secondAttribute="top" constant="25" id="7Oz-9h-U3b"/>
+                                            <constraint firstItem="2iB-AG-Xp8" firstAttribute="centerY" secondItem="KUC-4Y-beP" secondAttribute="centerY" id="FAj-rw-YGS"/>
+                                            <constraint firstAttribute="trailing" secondItem="QqA-ji-qaT" secondAttribute="trailing" constant="4" id="J1b-nh-oJq"/>
+                                            <constraint firstAttribute="width" secondItem="2iB-AG-Xp8" secondAttribute="width" id="MvN-Wr-BUO"/>
+                                            <constraint firstAttribute="bottom" secondItem="QqA-ji-qaT" secondAttribute="bottom" constant="24" id="NDT-PK-MgA"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="79" id="OmA-RI-P4C"/>
+                                            <constraint firstItem="QqA-ji-qaT" firstAttribute="leading" secondItem="2iB-AG-Xp8" secondAttribute="trailing" constant="26" id="Vet-9C-Ytb"/>
+                                            <constraint firstAttribute="width" secondItem="2iB-AG-Xp8" secondAttribute="width" constant="80" id="vyk-wC-DuZ"/>
+                                            <constraint firstItem="QqA-ji-qaT" firstAttribute="centerY" secondItem="KUC-4Y-beP" secondAttribute="centerY" id="zcj-3Z-BbE"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="OmA-RI-P4C"/>
+                                                <exclude reference="MvN-Wr-BUO"/>
+                                                <exclude reference="vyk-wC-DuZ"/>
+                                            </mask>
+                                        </variation>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="KUC-4Y-beP" secondAttribute="trailing" id="EPd-45-nTb"/>
+                                    <constraint firstItem="KUC-4Y-beP" firstAttribute="leading" secondItem="lRp-GR-lFB" secondAttribute="leading" id="KjU-gG-owz"/>
+                                    <constraint firstItem="KUC-4Y-beP" firstAttribute="height" secondItem="lRp-GR-lFB" secondAttribute="height" id="PJo-VP-gaJ"/>
+                                    <constraint firstAttribute="bottom" secondItem="KUC-4Y-beP" secondAttribute="bottom" id="PO7-hQ-6gn"/>
+                                    <constraint firstAttribute="bottom" secondItem="KUC-4Y-beP" secondAttribute="bottom" id="fxy-7m-HQM"/>
+                                    <constraint firstItem="KUC-4Y-beP" firstAttribute="top" secondItem="lRp-GR-lFB" secondAttribute="top" id="nXa-B2-gyZ"/>
+                                    <constraint firstAttribute="height" secondItem="KUC-4Y-beP" secondAttribute="height" id="p61-A5-M9Y"/>
+                                    <constraint firstAttribute="height" constant="79" id="rBT-Ln-axn"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="PJo-VP-gaJ"/>
+                                        <exclude reference="PO7-hQ-6gn"/>
+                                        <exclude reference="p61-A5-M9Y"/>
+                                    </mask>
+                                </variation>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
