--- a/ChachaT/Filtering.storyboard
+++ b/ChachaT/Filtering.storyboard
@@ -638,7 +638,7 @@
                                                     <constraint firstAttribute="height" constant="24" id="wVG-G5-Ya9"/>
                                                 </constraints>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HCW-bf-8ln">
+                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HCW-bf-8ln">
                                                 <rect key="frame" x="34" y="25" width="96" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="46" id="hUV-8T-TUR"/>
