added matches view controller

--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -5,6 +5,37 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
+        <!--Matches View Controller-->
+        <scene sceneID="TN1-qv-iFP">
+            <objects>
+                <viewController id="mQC-oi-9Nn" customClass="MatchesViewController" customModule="ChachaT" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xYf-XA-1XG"/>
+                        <viewControllerLayoutGuide type="bottom" id="H9Y-BF-hsP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="U3W-vt-Yet">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lIe-lt-gb4">
+                                <rect key="frame" x="277" y="285" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lIe-lt-gb4" firstAttribute="centerX" secondItem="U3W-vt-Yet" secondAttribute="centerX" id="YhB-Pr-pyt"/>
+                            <constraint firstItem="lIe-lt-gb4" firstAttribute="centerY" secondItem="U3W-vt-Yet" secondAttribute="centerY" id="w8P-5X-dRa"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="theButton" destination="lIe-lt-gb4" id="qHA-aS-QoC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UjD-MX-SJj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1372" y="-160"/>
+        </scene>
         <!--Profile Index View Controller-->
         <scene sceneID="8Ge-7n-FwY">
             <objects>
@@ -31,13 +62,22 @@
                                     <segue destination="Si2-TA-hhX" kind="show" identifier="ProfileIndexPageToEditProfilePage" id="6wl-Li-heC"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tLl-1C-M9m">
+                                <rect key="frame" x="271" y="366" width="59" height="30"/>
+                                <state key="normal" title="Matches"/>
+                                <connections>
+                                    <segue destination="mQC-oi-9Nn" kind="show" id="qDy-bG-ipR"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="UKB-hL-shh" firstAttribute="centerY" secondItem="iEg-Es-KxU" secondAttribute="centerY" id="3RS-9X-iEC"/>
                             <constraint firstItem="ClW-Sa-fQK" firstAttribute="centerX" secondItem="iEg-Es-KxU" secondAttribute="centerX" id="FOm-oL-bcD"/>
                             <constraint firstItem="ClW-Sa-fQK" firstAttribute="top" secondItem="UKB-hL-shh" secondAttribute="bottom" constant="13" id="GHB-FK-NcP"/>
+                            <constraint firstItem="tLl-1C-M9m" firstAttribute="top" secondItem="ClW-Sa-fQK" secondAttribute="bottom" constant="8" id="ZTt-x5-DLh"/>
                             <constraint firstItem="UKB-hL-shh" firstAttribute="centerX" secondItem="iEg-Es-KxU" secondAttribute="centerX" id="iPG-8y-mnx"/>
+                            <constraint firstItem="tLl-1C-M9m" firstAttribute="centerX" secondItem="iEg-Es-KxU" secondAttribute="centerX" id="u2S-RU-hm4"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="qt7-0Y-BIE"/>
