--- a/ChachaT/Filtering.storyboard
+++ b/ChachaT/Filtering.storyboard
@@ -34,7 +34,7 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="79"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MYZ-lm-Sxs">
-                                        <rect key="frame" x="0.0" y="0.0" width="134" height="79"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="16" height="79"/>
                                         <subviews>
                                             <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fwh-y2-WnZ" customClass="TagListView" customModule="ChachaT">
                                                 <rect key="frame" x="8" y="28" width="0.0" height="24"/>
@@ -44,32 +44,15 @@
                                                     <constraint firstAttribute="height" constant="24" id="wVG-G5-Ya9"/>
                                                 </constraints>
                                             </view>
-                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HCW-bf-8ln">
-                                                <rect key="frame" x="34" y="25" width="96" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="46" id="hUV-8T-TUR"/>
-                                                    <constraint firstAttribute="height" constant="30" id="ixS-Mp-iPD"/>
-                                                    <constraint firstAttribute="height" constant="30" id="ro1-Gj-iRg"/>
-                                                </constraints>
-                                                <state key="normal" title="Add To Profile"/>
-                                                <variation key="default">
-                                                    <mask key="constraints">
-                                                        <exclude reference="hUV-8T-TUR"/>
-                                                        <exclude reference="ro1-Gj-iRg"/>
-                                                    </mask>
-                                                </variation>
-                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="HCW-bf-8ln" firstAttribute="centerY" secondItem="MYZ-lm-Sxs" secondAttribute="centerY" id="KHW-zg-968"/>
                                             <constraint firstAttribute="width" secondItem="fwh-y2-WnZ" secondAttribute="width" constant="80" id="L3h-hq-jM4"/>
                                             <constraint firstItem="fwh-y2-WnZ" firstAttribute="centerY" secondItem="MYZ-lm-Sxs" secondAttribute="centerY" id="LMc-kh-jfp"/>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="79" id="OgL-kN-RUR"/>
+                                            <constraint firstAttribute="trailing" secondItem="fwh-y2-WnZ" secondAttribute="trailing" constant="8" id="QPT-ze-uhC"/>
                                             <constraint firstAttribute="width" secondItem="fwh-y2-WnZ" secondAttribute="width" id="Xqs-t2-Ghw"/>
                                             <constraint firstItem="fwh-y2-WnZ" firstAttribute="leading" secondItem="MYZ-lm-Sxs" secondAttribute="leading" constant="8" id="b2C-x7-Dp3"/>
-                                            <constraint firstItem="HCW-bf-8ln" firstAttribute="leading" secondItem="fwh-y2-WnZ" secondAttribute="trailing" constant="26" id="eST-RD-EkN"/>
-                                            <constraint firstAttribute="trailing" secondItem="HCW-bf-8ln" secondAttribute="trailing" constant="4" id="tKu-OU-cCs"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="constraints">
